Require auth code (in .env.secrets) to scrape
